# owlcms-referee-box-fw

./: CMakeLists.txt  README.md  TODO.md  prj.conf
boards/: esp32.overlay
src/: ble_config_mgr.c  ble_config_mgr.h  comms_mgr.c  comms_mgr.h  config_gatt_service.c  config_gatt_service.h  device_config.h  io.c  io.h  io_mgr.c  io_mgr.h  main.c  mqtt_client.c  mqtt_client.h  msys.c  msys.h  settings_util.c  settings_util.h  uart_config_mgr.c  uart_config_mgr.h  wifi_conn.c  wifi_conn.h
